[project]
name = "fsmapper-api"
version = "1.0.0"
description = "Python API responsible for storing, updating, and querying filesystem mapping data collected by the FSMapper agent."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.128.1",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "python-semantic-release>=10.5.3",
    "taskipy>=1.14.1",
    {include-group = "lint"},
    {include-group = "test"},
]
lint = [
    "ruff>=0.15.0",
]
test = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT', 'FAST']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.semantic_release]
branch = "main"
tag_format = "v{version}"
changelog_file = "CHANGELOG.md"

version_toml = [
  "pyproject.toml:project.version"
]

commit_parser = "conventional"

[tool.semantic_release.changelog]
exclude_commit_patterns = [
  "^chore",
  "^ci",
  "^test",
  "^refactor"
]


[tool.taskipy.tasks]
lint = "ruff check"
pre_format = "ruff check --fix"
format = "ruff format"
run = "uvicorn app.main:app --reload"
pre_test = "task lint"
test = 'pytest -s -x --cov=app -vv'
post_test = 'coverage html'
